# QtCreator-4-Templates

mkspecs/mingw32-clang/: qmake.conf
mkspecs/mingw64-clang/: qmake.conf
share/qtcreator/templates/wizards/classes/objc/: wizard.json
share/qtcreator/templates/wizards/classes/objcpp/: file.h  file.mm  wizard.json
share/qtcreator/templates/wizards/files/objcppsource/: wizard.json
share/qtcreator/templates/wizards/files/objcsource/: wizard.json
share/qtcreator/templates/wizards/projects/plainobjc/: CMakeLists.txt  file.pro  main.m  wizard.json
share/qtcreator/templates/wizards/projects/plainobjclib/: CMakeLists.txt  lib.h  lib.m  wizard.json
share/qtcreator/templates/wizards/projects/plainobjcplugin/: CMakeLists.txt  wizard.json
share/qtcreator/templates/wizards/projects/plainobjcpp/: CMakeLists.txt  main.mm  wizard.json
share/qtcreator/templates/wizards/projects/plainobjcpplib/: CMakeLists.txt  wizard.json
share/qtcreator/templates/wizards/projects/plainobjcppplugin/: CMakeLists.txt  lib.h  lib.mm  wizard.json
