project(%{ProjectName})
cmake_minimum_required(VERSION 2.8)
set(OBJFW_DIR "C:/MinGW/sdk/objfw-i686")
set(OBJFW_INCLUDE_DIR "${OBJFW_DIR}/include")
set(OBJFW_LIB_DIR "${OBJFW_DIR}/lib")
set(OBJFW_LIBS "-lobjfw -lm -lws2_32")
set(OBJFW_LINKER_FLAGS "-L${OBJFW_LIB_DIR}")
set(OBJFW_OBJC_FLAGS "-Xclang -fobjc-runtime=objfw -fexceptions -fobjc-exceptions -funwind-tables -fconstant-string-class=OFConstantString -Xclang -fno-constant-cfstrings -Xclang -fblocks -I${OBJFW_INCLUDE_DIR}")
include_directories(${OBJFW_INCLUDE_DIR})
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c ${OBJFW_OBJC_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OBJFW_LINKER_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -x objective-c++ ${OBJFW_OBJC_FLAGS} -fcxx-exceptions")
set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_C_COMPILER> <LINK_FLAGS> <CMAKE_C_LINK_FLAGS> <OBJECTS> -o <TARGET> ${OBJFW_LIBS} <LINK_LIBRARIES>")
set(CMAKE_CXX_LINK_EXECUTABLE "<CMAKE_CXX_COMPILER> <LINK_FLAGS> <CMAKE_CXX_LINK_FLAGS> <OBJECTS> -o <TARGET> ${OBJFW_LIBS} <LINK_LIBRARIES>")
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
